package mode.observerMode;

/**
 * @Author ws
 * @Date 2021/5/26 22:38
 */
public interface Observer {
    void dataChange(String message);
}
